--- a/css/rabbits.css
+++ b/css/rabbits.css
@@ -4,7 +4,7 @@ body{
 
 header h1{
 	text-align: center;
-	background-color: lightgreen
+	background-color: lightgreen;
 	color: blue;
 	font-size: 40px;
 
