--- a/css/rabbits.css
+++ b/css/rabbits.css
@@ -2,10 +2,14 @@ body{
 	margin: 0px;
 }
 
-header h1{
+header{
 	text-align: center;
 	background-color: lightgreen;
 	color: blue;
 	font-size: 40px;
+}
 
+header h1{
+	color: blue;
+	font-size: 40px;
 }
