--- a/css/rabbits.css
+++ b/css/rabbits.css
@@ -1,20 +1,47 @@
 body{
-	margin: 0px;
+	margin: 0;
+	font-family: Helvetica, Ariel, sans-serif;
 }
 
 header{
 	text-align: center;
-	background-color: lightgreen;
+	background-color: lightpink;
+	padding-top: 50px;
+	padding-bottom: 50px; 
 }
 
-h1{
+h1, h2{
+	font-family: 'Roboto', sans-serif;
+}
+
+header h1{
+	text-align: center;
 	font-size: 40px;
-	color: blue;
+	font-family: Helvetica, Ariel, sans-serif;
+}
+
+h2{
+	font-size: 30px;
+	text-align: center;
+	color: #004D40;
 }
 
 header img{
 	border-radius: 50px;
 	width: 500px;
-	border: 20px;
-	border-color: blue;
+	border: 20px solid black;
+}
+
+main{
+	max-width: 1500px;
+}
+
+main img {
+	max-width: 300px;
+	padding-left: 250px;
+}
+
+p{
+	text-align: center;
+	font-size: 20px;
 }
