--- a/css/rabbits.css
+++ b/css/rabbits.css
@@ -33,15 +33,37 @@ header img{
 }
 
 main{
-	max-width: 1500px;
+	max-width: 800px;
 }
 
 main img {
-	max-width: 300px;
-	padding-left: 250px;
+	max-width: 100%;
 }
 
-p{
+ol, ul, p{
 	text-align: center;
 	font-size: 20px;
+	color: green;
+}
+
+a{
+	color: green;  
+}
+a:hover{
+	color: white;
+	background-color: green;
+}
+
+footer a{
+	color: #004D40;
+}
+footer a:hover{
+	opacity: .5;
+	background-color: transparent;
+}
+p.caption{
+	color: #9999;
+	font-style: italic;
+}
+
 }
