--- a/css/about.css
+++ b/css/about.css
@@ -5,7 +5,11 @@ body{
 
 {{#if page.title '!==' 'Home'}}
         <h1 class="page-heading">{{ page.title }}</h1>
- {{/if}}
+header{
+	background-color: darkgreen;
+}
+}}        
+
 
 /* header styles */
 header{
